syntax = "proto3";

package cdc_service;

option optimize_for = SPEED;

// Notes: This proto needs to be self-contained
message Status {
  enum Code {
    UNSPECIFIED = 0;
    OK = 1;
  }
  Code code = 1;
  string message = 2;
}

message DbConnectorProperties {
  string database_host = 1;
  string database_port = 2;
  string database_user = 3;
  string database_password = 4;
  string database_name = 5;
  string table_name = 6;
  string partition = 7;
  string start_offset = 8;
  bool include_schema_events = 9;
}

message CdcMessage {
  string payload = 1;
  string partition = 2;
  string offset = 3;
}

message GetEventStreamRequest {
  uint64 source_id = 1;
  DbConnectorProperties properties = 2;
}

message GetEventStreamResponse {
  uint64 source_id = 1;
  repeated CdcMessage events = 2;
}

service CdcService {
  rpc GetEventStream(GetEventStreamRequest) returns (stream GetEventStreamResponse);
}
